--- a/gallery.html
+++ b/gallery.html
@@ -12,5 +12,5 @@
     <a href="gallery.html"> GALLERY </a>
     <a href="about.html"> ABOUT </a>
     <hr>
-
+    <h2>PHOTO GALLERY </h2>
     </body>
