--- a/projects.html
+++ b/projects.html
@@ -12,5 +12,5 @@
     <a href="gallery.html"> GALLERY </a>
     <a href="about.html"> ABOUT </a>
     <hr>
-
+    <h2>MY PROJECTS </h2>
     </body>
